add 3 endpoints related with bookmark
